added Shape Divider for svg and parallax effect

--- a/index.html
+++ b/index.html
@@ -1,50 +1,368 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=judge" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
-</head>
-<body>
-    
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-color py-5 pt-lg-5">
+      <div class="container">
+        <a class="navbar-brand text-white" href="#">Amit Bisht</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Service</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-capitalize" href="#">contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- hero section starts -->
+
+    <section class="bg-main bg-color hero-section">
+      <div class="container">
+        <div class="row mb-5">
+          <div
+            class="col-md-12 col-lg-6 d-flex flex-column justify-content-center align-items-start"
+          >
+            <h1 class="text-capitalize fw-bolder text-white">
+              We collect High Quality Leads
+            </h1>
+            <p class="mt-3 mb-5 para-width text-light-grey">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sunt
+              obcaecati eos autem id hic veritatis accusamus maiores nesciunt
+              officiis ut itaque fugit.
+            </p>
+            <div class="text-center w-100 text-md-start">
+              <button
+                class="text-capitalize btn btn-primary px-5 py-2"
+                data-bs-toggle="tooltip"
+                data-bs-title="Get in Touch"
+              >
+                Contact us
+              </button>
+            </div>
+          </div>
+
+          <!-- image section -->
+
+          <div class="col-md-12 col-lg-6">
+            <div class="text-center text-lg-end">
+              <video
+                src="./images/hero.mp4"
+                loop
+                muted
+                autoplay
+                class="hero-video--section"
+              >
+                Your browser does not support the video tag.
+              </video>
+            </div>
           </div>
         </div>
-      </nav>
-    
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    </body>
+      </div>
+      <div class="custom-shape-divider-bottom-1726304980">
+        <svg
+          data-name="Layer 1"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1200 120"
+          preserveAspectRatio="none"
+        >
+          <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="shape-fill"
+          ></path>
+        </svg>
+      </div>
+    </section>
+
+    <!-- hero section ends -->
+
+    <!-- service section -->
+
+    <section class="services-section">
+      <div class="container text-center common-title title fw-bold">
+        <h2 class="common-heading">What We Will Do For <br />Your Business</h2>
+        <hr class="w-25 mx-auto" />
+      </div>
+
+      <div class="container mt-5">
+        <div class="row g-5">
+          <div class="col-12 col-lg-4 col-md-12 col-xxl-4">
+            <div class="text-center card-box rounded-2 p-5">
+              <img
+                src="./images/link.gif"
+                alt="link"
+                class="img-fluid"
+                width="200px"
+              />
+
+              <h5 class="my-3 fw-normal">Link Building</h5>
+
+              <p class="mb-5">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Debitis nobis voluptatum ex blanditiis qui iusto eum possimus.
+                Quidem, vero aspernatur Lorem ipsum dolor sit amet.
+              </p>
+
+              <div class="d-flex justify-content-center align-items-center">
+                <a
+                  href="#service"
+                  class="icon-span rounded-circle d-flex justify-content-center align-items-center"
+                >
+                  <i class="fa-solid fa-arrow-right"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4 col-md-12 col-xxl-4">
+            <div class="text-center card-box rounded-2 p-5 shadow">
+              <img
+                src="./images/speaker.gif"
+                alt="link"
+                class="img-fluid"
+                width="200px"
+              />
+
+              <h5 class="my-3 fw-normal">Content Marketing</h5>
+
+              <p class="mb-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptas autem dolor ab delectus iste quidem enim, fugiat
+                dignissimos corporis animi? Lorem ipsum dolor sit amet.
+              </p>
+
+              <div class="d-flex justify-content-center align-items-center">
+                <a
+                  href="#service"
+                  class="icon-span rounded-circle d-flex justify-content-center align-items-center"
+                >
+                  <i class="fa-solid fa-arrow-right"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4 col-md-12 col-xxl-4">
+            <div class="text-center card-box rounded-2 p-5">
+              <img
+                src="./images/seo.gif"
+                alt="link"
+                class="img-fluid"
+                width="200px"
+              />
+
+              <h5 class="my-3 fw-normal">On Page Seo</h5>
+
+              <p class="mb-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+                nobis incidunt, minima vel sequi ratione mollitia, laudantium
+                provident atque, totam odio corrupti nesciunt adipisci!
+              </p>
+
+              <div class="d-flex justify-content-center align-items-center">
+                <a
+                  href="#service"
+                  class="icon-span rounded-circle d-flex justify-content-center align-items-center"
+                >
+                  <i class="fa-solid fa-arrow-right"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- service section ends -->
+
+    <!-- products showcase starts -->
+
+    <section class="bg-main bg-color more-info-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-lg-6 img-section">
+            <figure>
+              <img
+                src="./images/phone.gif"
+                alt="digital-products"
+                class="img-fluid"
+              />
+            </figure>
+          </div>
+
+          <div
+            class="col-md-12 col-lg-6 d-flex flex-column justify-content-center align-items-start"
+          >
+            <h2 class="text-capitalize fw-bolder text-white">
+              Steps to Build a <br />
+              Successful Digital Product
+            </h2>
+            <p class="mt-3 mb-5 para-width text-light-grey">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sunt
+              obcaecati eos autem id hic veritatis accusamus maiores nesciunt
+              officiis ut itaque fugit Lorem ipsum, dolor sit amet consectetur
+              adipisicing elit. Omnis architecto exercitationem aliquam.
+              Voluptatum, eius itaque.
+            </p>
+            <div class="text-center w-100 text-md-start">
+              <button
+                class="text-capitalize btn btn-primary px-5 py-2"
+                data-bs-toggle="tooltip"
+                data-bs-title="Get in Touch"
+              >
+                Contact us
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- products showcase ends -->
+
+    <!-- online mode section starts -->
+
+    <section class="services-section">
+      <div class="container text-center common-title title fw-bold">
+        <h2 class="common-heading">
+          Generating New Customers via <br />
+          Online Mode
+        </h2>
+        <hr class="w-25 mx-auto" />
+      </div>
+
+      <div class="container">
+        <div class="row g-5">
+          <div class="col-12 col-md-12 col-lg-6">
+            <div class="d-flex px-3 py-5 shadow">
+              <img
+                src="./images/phone.gif"
+                alt="GIF Image"
+                class="d-md-block d-none img-fluid mx-3"
+                width="150px"
+              />
+              <div>
+                <p class="mb-3 fw-bolder">Influencer Marketing</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Maxime numquam, deleniti veritatis nostrum nisi unde aperiam
+                  quam! Quos odit ipsa nobis minima Lorem ipsum dolor sit amet.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-12 col-lg-6">
+            <div class="d-flex px-3 py-5 shadow">
+              <img
+                src="./images/speaker.gif"
+                alt="GIF Image"
+                class="d-md-block d-none img-fluid mx-3"
+                width="150px"
+              />
+              <div>
+                <p class="mb-3 fw-bolder">Social Media Advertising</p>
+                <p>
+                  Reach a wider audience by creating engaging ads on platform
+                  like Facebook, Instagram and LinkedIn. Target specificc
+                  demographics with potential customers interested in your
+                  services.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-12 col-lg-6">
+            <div class="d-flex px-3 py-5 shadow">
+              <img
+                src="./images/speaker.gif"
+                alt="GIF Image"
+                class="d-md-block d-none img-fluid mx-3"
+                width="150px"
+              />
+              <div>
+                <p class="mb-3 fw-bolder">Content Marketing</p>
+                <p>
+                  Reach a wider audience by creating engaging ads on platform
+                  like Facebook, Instagram and LinkedIn. Target specificc
+                  demographics with potential customers interested in your
+                  services.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-12 col-lg-6">
+            <div class="d-flex px-3 py-5 shadow">
+              <img
+                src="./images/phone.gif"
+                alt="GIF Image"
+                class="d-md-block d-none img-fluid mx-3"
+                width="150px"
+              />
+              <div>
+                <p class="mb-3 fw-bolder">Referral Programs</p>
+                <p>
+                  Reach a wider audience by creating engaging ads on platform
+                  like Facebook, Instagram and LinkedIn. Target specificc
+                  demographics with potential customers interested in your
+                  services.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- online mode section endss -->
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      const tooltipTriggerList = document.querySelectorAll(
+        '[data-bs-toggle="tooltip"]'
+      );
+      const tooltipList = [...tooltipTriggerList].map(
+        (tooltipTriggerEl) => new bootstrap.Tooltip(tooltipTriggerEl)
+      );
+    </script>
+  </body>
 </html>
