--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             </p>
 
             <button
-              class="text-capitalize btn btn-primary contact-us-btn contactButton px-5 py-2"
+              class="text-capitalize btn btn-primary contactButton contact-us-btn px-5 py-2"
               data-bs-toggle="tooltip"
               data-bs-title="Get in Touch"
             >
