contact-us issue fixed

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
               responsive websites and applications that drive user engagement
               and business growth.
             </p>
-            <div class="text-center w-100 text-md-end">
+            <div class="text-center w-100 text-md-start">
               <button
-                class="text-capitalize btn btn-primary contactButton px-5 py-2"
+                class="text-capitalize btn btn-primary contactButton styleContact px-5 py-2"
                 data-bs-toggle="tooltip"
                 data-bs-title="Get in Touch"
               >
